# outpost-3

./: .gdunit4  .gitattributes  .gitignore  COVERAGE_QUICK_REF.md  Cargo.toml  GDUNIT4_VSTEST_QUICK_REF.md  MainNode.cs  Outpost 3.csproj  Outpost 3.sln  README.md  TESTING_SETUP_COMPLETE.md  project.godot  run-coverage.ps1  run-gdunit4-tests.ps1  run-gdunit4-vstest.ps1  run-tests.ps1  setup-gdunit4.ps1
.github/: AGENTS.md  copilot-instructions.md
Common/: CelestialBody.cs  CelestialBodyMarkers.cs.uid  GameRoot.cs  OrbitalState.cs  OrbitalState.cs.uid
Features/: Faction.cs  Faction.cs.uid
Tests/: EventStoreWorkflowTests.cs  FileEventStoreTests.cs  Outpost3.Tests.csproj  README.md  README_NEW.md  SaveLoadTests.cs  TEST_FIX_SUMMARY.md  coverlet.runsettings  gdunit4.runsettings
data/: solar_system_data 1.xlsx  solar_system_data.csv
docs/: 01_game_concept_rev2.md  02_screens.md  03_game_mechanics.md  04_entities.md  05_architecture.md  06_implementation_plan_1.md  07_roadmap.md  08_feature_1_3.md  09_feature_1_4.md  10_manual_testing_save_load.md  11_session_1_4_completion_summary.md  12_feature_2_1.md  13_feature_galaxy_map.md  14_manual_testing_star_map.md  15_galaxy_map_implementation_complete.md  16_screen_flow_implementation.md  17_main_cleanup_autoload_migration.md  18_star_map_flow_fixes.md  19_star_map_probe_visualization.md  20_feature_2_2.md  20_session_2_2_complete.md  (+44 more)
old/core/: Cargo.toml  build.rs  outpost_core.h
old/core/src/: commands.rs  domain.rs  events.rs  lib.rs
old/core/src/ffi/: mod.rs
old/core/src/systems/: exploration.rs  mod.rs
(+374 files in other folders)
