[workspace]
members = [
    "crates/*","."
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"


[package]
name = "outpost-3"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.17.2"}
bevy_egui = {version = "0.37.1"}
game-core = { path = "crates/game-core" }
game-persist = { path = "crates/game-persist"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3