[package]
name = "outpost-3-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }

[build-dependencies]
cbindgen = "0.29.0"

[features]
ffi = []
